# SFML_2.6.2-Template-CPP

./: CMakeLists.txt  README.md
cmake/: SFML.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
